src/main/java/com/example/movierecommendationapi/error/Error.java
package com.example.movierecommendationapi.error;

public record Error() {
}
